[ADD] Add follow system and youtube follow

--- a/APIAS/APIAS.csproj
+++ b/APIAS/APIAS.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.2.0" />
     <PackageReference Include="RethinkDb.Driver" Version="2.3.150" />
+    <PackageReference Include="System.ServiceModel.Syndication" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
